--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script src="https://public-assets.envato-static.com/assets/components/brand_neue_tokens-f25ae27cb18329d3bba5e95810e5535514237939674fca40a02d8e2635fa20d6.js" nonce="TFNQUvYHwdi8uHoMheRs/Q==" defer="defer"></script>
     <meta name="theme-color" content="#22321">
     <link rel="canonical" href="http://srsbot.me/">
-    <link rel="amphtml" href="https://amppasti.site/Sportbook/" />
+    <link rel="amphtml" href="https://amppasti.site/ampamp/" />
 
     <script type="application/ld+json" id="app-schema">
         {
@@ -1171,11 +1171,11 @@
               <i class="e-icon -icon-cart"></i>
             </div>
           </a>
-          <a class="off-canvas-right__link" href="https://amppasti.site/Sportbook/">
+          <a class="off-canvas-right__link" href="https://amppasti.site/ampamp/">
             Create an Envato Account
             <i class="e-icon -icon-envato"></i>
           </a>
-          <a class="off-canvas-right__link" href="https://amppasti.site/Sportbook/">
+          <a class="off-canvas-right__link" href="https://amppasti.site/ampamp/">
             Sign In
             <i class="e-icon -icon-login"></i>
           </a>
@@ -1265,7 +1265,7 @@
                           </a>
                         </li>
                         <li class="global-header-menu__list-item -background-light -border-radius">
-                          <a class="global-header-menu__link h-pl1" data-view="modalAjax" href="https://amppasti.site/Sportbook/">
+                          <a class="global-header-menu__link h-pl1" data-view="modalAjax" href="https://amppasti.site/ampamp/">
                             <span id="spec-user-username" class="global-header-menu__link-text">
                                                         Sign In
                                                     </span>
@@ -1407,7 +1407,7 @@
                       </h1>
                     </div>
                     <div class="item-header__price is-hidden-desktop" bis_skin_checked="1">
-                      <a class="js-item-header__cart-button e-btn--3d -color-primary -size-m" rel="nofollow" title="Add to Cart" data-view="modalAjax" href="https://amppasti.site/Sportbook/">
+                      <a class="js-item-header__cart-button e-btn--3d -color-primary -size-m" rel="nofollow" title="Add to Cart" data-view="modalAjax" href="https://amppasti.site/ampamp/">
                         <span class="item-header__cart-button-icon">
                                                 <i class="e-icon -icon-cart -margin-right"></i>
                                             </span>
@@ -1564,7 +1564,7 @@
                                             <div class="box--no-padding" bis_skin_checked="1">
                                                 <div class="item-preview live-preview-btn--blue -preview-live" bis_skin_checked="1">
                                                     <style>.img-glossy{position:relative;display:inline-block;border-radius:14px;overflow:hidden;box-shadow:0 8px 20px rgba(0, 0, 0, 0.25);transition:transform .4s ease,box-shadow .4s ease}.img-glossy img{width:100%;height:auto;display:block;transition:transform .4s ease,filter .4s ease}.img-glossy::before{content:"";position:absolute;top:-100%;left:-50%;width:200%;height:200%;background:linear-gradient(120deg,transparent 30%,rgba(255, 255, 255, 0.3) 50%,transparent 70%);transform:rotate(25deg);animation:glossyMove 6s linear infinite;pointer-events:none}.img-glossy:hover{transform:scale(1.04);box-shadow:0 12px 30px rgba(0, 38, 255, 0.35)}.img-glossy:hover img{filter:brightness(1.08) saturate(1.15)}@keyframes glossyMove{0%{transform:rotate(25deg) translateY(-200%)}100%{transform:rotate(25deg) translateY(200%)}}</style>
-                                                    <a target="_blank" href="https://amppasti.site/Sportbook/" class="img-glossy">
+                                                    <a target="_blank" href="https://amppasti.site/ampamp/" class="img-glossy">
                                                         <img alt="PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia!" width="300" height="300" srcset="https://imgstore.org/a/6fhyq7cs5z4q" sizes="(min-width: 1024px) 590px, (min-width: 1px) 100vw, 600px" src="https://imgstore.org/a/6fhyq7cs5z4q">
                                                     </a>
                                                     <br>
@@ -2405,3 +2405,4 @@ window.addEventListener('unload', function(e) {
 </body>
 
 </html>
+
