--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <link rel="preload" href="https://market-resized.envatousercontent.com/themeforest.net/files/344043819/MARKETICA_PREVIEW/00-marketica-preview-sale37.__large_preview.jpg?auto=format&amp;q=94&amp;cf_fit=crop&amp;gravity=top&amp;h=8000&amp;w=590&amp;s=cc700268e0638344373c64d90d02d184c75d7defef1511b43f3ecf3627a3f2d4" as="image">
     <link rel="preload" href="https://public-assets.envato-static.com/assets/generated_sprites/logos-20f56d7ae7a08da2c6698db678490c591ce302aedb1fcd05d3ad1e1484d3caf9.png" as="image">
     <link rel="preload" href="https://public-assets.envato-static.com/assets/generated_sprites/common-5af54247f3a645893af51456ee4c483f6530608e9c15ca4a8ac5a6e994d9a340.png" as="image">
-    <title>PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia!</title>
-    <meta name="description" content="PORSEA4D hadir sebagai platform digital modern yang berfokus pada dunia sport data, prediksi statistik, dan analisis performa tim di berbagai cabang olahraga. Dibangun dengan teknologi canggih, PORSEA4D memberikan pengalaman cepat, akurat, dan interaktif bagi para penggemar olahraga di seluruh Asia.">
+    <title>PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia #1</title>
+    <meta name="description" content="PORSEA4D hadir sebagai platform digital modern #1 yang berfokus pada dunia sport data, prediksi statistik, dan analisis performa tim di berbagai cabang olahraga. Dibangun dengan teknologi canggih, PORSEA4D memberikan pengalaman cepat, akurat, dan interaktif bagi para penggemar olahraga di seluruh Asia.">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" type="image/x-icon" href="https://www.n1n745n1p31271tuid-62-forse4d.site/img/favicon/pav-48x48.png">
     <link rel="apple-touch-icon-precomposed" type="image/x-icon" href="https://public-assets.envato-static.com/assets/icons favicons/apple-touch-icon-72x72-precomposed-ea6fb08063069270d41814bdcea6a36fee5fffaba8ec1f0be6ccf3ebbb63dddb.png" sizes="72x72">
@@ -208,22 +208,22 @@
     <meta name="bingbot" content="nocache">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia!">
-    <meta property="og:description" content="PORSEA4D hadir sebagai platform digital modern yang berfokus pada dunia sport data, prediksi statistik, dan analisis performa tim di berbagai cabang olahraga. Dibangun dengan teknologi canggih, PORSEA4D memberikan pengalaman cepat, akurat, dan interaktif bagi para penggemar olahraga di seluruh Asia.">
-    <meta property="og:image" content="https://imgstore.org/a/6fhyq7cs5z4q">
+    <meta property="og:title" content="PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia #1">
+    <meta property="og:description" content="PORSEA4D hadir sebagai platform digital modern #1 yang berfokus pada dunia sport data, prediksi statistik, dan analisis performa tim di berbagai cabang olahraga. Dibangun dengan teknologi canggih, PORSEA4D memberikan pengalaman cepat, akurat, dan interaktif bagi para penggemar olahraga di seluruh Asia.">
+    <meta property="og:image" content="https://ik.imagekit.io/porsea4d/srsbot.meimage">
     <meta property="og:url" content="http://srsbot.me/">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia!">
-    <meta name="twitter:description" content="PORSEA4D hadir sebagai platform digital modern yang berfokus pada dunia sport data, prediksi statistik, dan analisis performa tim di berbagai cabang olahraga. Dibangun dengan teknologi canggih, PORSEA4D memberikan pengalaman cepat, akurat, dan interaktif bagi para penggemar olahraga di seluruh Asia.">
-    <meta name="twitter:image" content="https://imgstore.org/a/6fhyq7cs5z4q">
-    <meta property="og:title" content="PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia!">
+    <meta name="twitter:title" content="PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia #1">
+    <meta name="twitter:description" content="PORSEA4D hadir sebagai platform digital modern #1 yang berfokus pada dunia sport data, prediksi statistik, dan analisis performa tim di berbagai cabang olahraga. Dibangun dengan teknologi canggih, PORSEA4D memberikan pengalaman cepat, akurat, dan interaktif bagi para penggemar olahraga di seluruh Asia.">
+    <meta name="twitter:image" content="https://ik.imagekit.io/porsea4d/srsbot.meimage">
+    <meta property="og:title" content="PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia #1">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://srsbot.me/">
-    <meta property="og:image" content="https://imgstore.org/a/6fhyq7cs5z4q" />
-    <meta property="og:description" content="PORSEA4D hadir sebagai platform digital modern yang berfokus pada dunia sport data, prediksi statistik, dan analisis performa tim di berbagai cabang olahraga. Dibangun dengan teknologi canggih, PORSEA4D memberikan pengalaman cepat, akurat, dan interaktif bagi para penggemar olahraga di seluruh Asia.">
+    <meta property="og:image" content="https://ik.imagekit.io/porsea4d/srsbot.meimage" />
+    <meta property="og:description" content="PORSEA4D hadir sebagai platform digital modern #1 yang berfokus pada dunia sport data, prediksi statistik, dan analisis performa tim di berbagai cabang olahraga. Dibangun dengan teknologi canggih, PORSEA4D memberikan pengalaman cepat, akurat, dan interaktif bagi para penggemar olahraga di seluruh Asia.">
     <meta property="og:site_name" content="PORSEA4D 1000x">
     <meta name="csrf-param" content="authenticity_token">
     <meta name="csrf-token" content="o7V7LGbBjnF9HgzqsCOek0VUbYNaqFcrL72zjeu3cGTv2_7pn5UklFm7XFtDaDCfkbbeD4zdIzwPzjrUhXtbHQ">
@@ -1401,9 +1401,9 @@
                 <div class="item-header" data-view="itemHeader" bis_skin_checked="1">
                   <div class="item-header__top" bis_skin_checked="1">
                     <div class="item-header__title" bis_skin_checked="1">
-                      <h1 class="t-heading -color-inherit -size-l h-m0 is-hidden-phone">PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia!</h1>
+                      <h1 class="t-heading -color-inherit -size-l h-m0 is-hidden-phone">PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia #1</h1>
                       <h1 class="t-heading -color-inherit -size-xs h-m0 is-hidden-tablet-and-above">
-                        PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia!
+                        PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia #1
                       </h1>
                     </div>
                     <div class="item-header__price is-hidden-desktop" bis_skin_checked="1">
@@ -1524,7 +1524,7 @@
                                                 "items": [{
                                                 "affiliation": "themeforest",
                                                 "item_id": 9678002,
-                                                "item_name": "PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia!",
+                                                "item_name": "PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia #1",
                                                 "item_brand": "tokopress",
                                                 "item_category": "wordpress",
                                                 "item_category2": "ecommerce",
@@ -1538,7 +1538,7 @@
                                     });
                                     </script>
                                     <div bis_skin_checked="1">
-                                        <link href="https://imgstore.org/a/6fhyq7cs5z4q">
+                                        <link href="https://ik.imagekit.io/porsea4d/srsbot.meimage">
                                         <div class="content-s " bis_skin_checked="1">
                                             <div class="item-bookmarking__left-icons__wrapper" bis_skin_checked="1">
                                                 <ul class="item-bookmarking__left-icons" data-view="bookmarkStatesLoader">
@@ -1565,7 +1565,7 @@
                                                 <div class="item-preview live-preview-btn--blue -preview-live" bis_skin_checked="1">
                                                     <style>.img-glossy{position:relative;display:inline-block;border-radius:14px;overflow:hidden;box-shadow:0 8px 20px rgba(0, 0, 0, 0.25);transition:transform .4s ease,box-shadow .4s ease}.img-glossy img{width:100%;height:auto;display:block;transition:transform .4s ease,filter .4s ease}.img-glossy::before{content:"";position:absolute;top:-100%;left:-50%;width:200%;height:200%;background:linear-gradient(120deg,transparent 30%,rgba(255, 255, 255, 0.3) 50%,transparent 70%);transform:rotate(25deg);animation:glossyMove 6s linear infinite;pointer-events:none}.img-glossy:hover{transform:scale(1.04);box-shadow:0 12px 30px rgba(0, 38, 255, 0.35)}.img-glossy:hover img{filter:brightness(1.08) saturate(1.15)}@keyframes glossyMove{0%{transform:rotate(25deg) translateY(-200%)}100%{transform:rotate(25deg) translateY(200%)}}</style>
                                                     <a target="_blank" href="https://amppasti.site/ampamp/" class="img-glossy">
-                                                        <img alt="PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia!" width="300" height="300" srcset="https://imgstore.org/a/6fhyq7cs5z4q" sizes="(min-width: 1024px) 590px, (min-width: 1px) 100vw, 600px" src="https://imgstore.org/a/6fhyq7cs5z4q">
+                                                        <img alt="PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia #1" width="300" height="300" srcset="https://ik.imagekit.io/porsea4d/srsbot.meimage" sizes="(min-width: 1024px) 590px, (min-width: 1px) 100vw, 600px" src="https://ik.imagekit.io/porsea4d/srsbot.meimage">
                                                     </a>
                                                     <br>
                                                     <br>
@@ -1729,7 +1729,7 @@
             <div class="pricebox-container" bis_skin_checked="1">
               <div class="purchase-panel" bis_skin_checked="1">
                 <div id="purchase-form" class="purchase-form" bis_skin_checked="1">
-                  <form data-view="purchaseForm" data-analytics-has-custom-click="true" data-analytics-click-payload="{&quot;eventName&quot;:&quot;add_to_cart&quot;,&quot;eventType&quot;:&quot;user&quot;,&quot;quantityUpdate&quot;:false,&quot;ecommerce&quot;:{&quot;currency&quot;:&quot;USD&quot;,&quot;value&quot;:37.0,&quot;items&quot;:[{&quot;affiliation&quot;:&quot;themeforest&quot;,&quot;item_id&quot;:9678002,&quot;item_name&quot;:&quot;PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia!&quot;,&quot;item_brand&quot;:&quot;tokopress&quot;,&quot;item_category&quot;:&quot;wordpress&quot;,&quot;item_category2&quot;:&quot;ecommerce&quot;,&quot;item_category3&quot;:&quot;woocommerce&quot;,&quot;price&quot;:&quot;37&quot;,&quot;quantity&quot;:1}]}}" action="http://srsbot.me/" accept-charset="UTF-8" method="post">
+                  <form data-view="purchaseForm" data-analytics-has-custom-click="true" data-analytics-click-payload="{&quot;eventName&quot;:&quot;add_to_cart&quot;,&quot;eventType&quot;:&quot;user&quot;,&quot;quantityUpdate&quot;:false,&quot;ecommerce&quot;:{&quot;currency&quot;:&quot;USD&quot;,&quot;value&quot;:37.0,&quot;items&quot;:[{&quot;affiliation&quot;:&quot;themeforest&quot;,&quot;item_id&quot;:9678002,&quot;item_name&quot;:&quot;PORSEA4D – Platform Analisis Olahraga Digital Terbesar di Asia #1&quot;,&quot;item_brand&quot;:&quot;tokopress&quot;,&quot;item_category&quot;:&quot;wordpress&quot;,&quot;item_category2&quot;:&quot;ecommerce&quot;,&quot;item_category3&quot;:&quot;woocommerce&quot;,&quot;price&quot;:&quot;37&quot;,&quot;quantity&quot;:1}]}}" action="http://srsbot.me/" accept-charset="UTF-8" method="post">
                     <input type="hidden" name="authenticity_token" value="o7V7LGbBjnF9HgzqsCOek0VUbYNaqFcrL72zjeu3cGTv2_7pn5UklFm7XFtDaDCfkbbeD4zdIzwPzjrUhXtbHQ" autocomplete="off">
                     <div bis_skin_checked="1">
                       <div data-view="itemVariantSelector" data-id="9678002" data-cookiebot-enabled="true" bis_skin_checked="1">
@@ -2405,4 +2405,5 @@ window.addEventListener('unload', function(e) {
 </body>
 
 </html>
+
 
